Bug-fix: remove old background image and replace with new one to remove blank edges when too much vertical expansion occurs, and remove media queries for html for very high resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: url(../images/background.png) center center no-repeat;
+    background: url(../images/background.png) center top no-repeat;
 }
 
 h1,h2,h3 {
@@ -406,13 +406,6 @@ body {
     
     #title > h1 {
         font-size: 8.75em;
-    }
-
-    html {
-        width: 100%;
-        height: 100%;
-        background: url(../images/background.png) center center no-repeat;
-        background-size: cover;
     }
 }
 
